# CrimeCaster

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestion  Dockerfile.training  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_NEON.md  OPTIMIZATION_SUMMARY.md  QUARTERLY_PIPELINE_SETUP.md  README.md  README_NEON_SETUP.md  WHATSNEW_LOCAL_STORAGE.md  docker-compose.yml  pyproject.toml
.github/workflows/: quarterly-pipeline.yml
api/: main.py
docs/: database_setup.md  dataset_type_implementation.md  get_connection_string.md  local_setup.md  local_storage_guide.md  multi_dataset_ingestion.md  neon_setup.md  quarterly_pipeline.md  troubleshooting_connection.md
feature_engineering/: __init__.py
frontend/: next.config.js  package.json
frontend/pages/: index.tsx
inference/: __init__.py
ingestion/: __init__.py
ingestion/bronze/: README.md  __init__.py  csv_loader.py  dataset_config.py
ingestion/silver/: README.md  __init__.py  cleaner.py
scripts/: README_TEST_PIPELINE.md  add_dataset_type_column.py  check_dns.py  run_pipeline.py  test_ckan_discovery.py  test_connection.py  test_gold_preparation.py  test_pipeline.py  test_production_pipeline.py  test_supabase_api.py  verify_gold.py  verify_silver.py  verify_supabase.py
sql/: README.md  schema.sql
sql/migrations/: 001_initial_schema.sql  002_add_dataset_type_column.sql  run_migrations.py
tests/: test_optimizations.py
training/: __init__.py  data_loader.py  feature_engineering.py
transformations/: __init__.py
transformations/gold/: README.md  __init__.py  h3_mapper.py
validation/: __init__.py  schema_validator.py
